`feat` Add `ejs`

--- a/service/package.json
+++ b/service/package.json
@@ -2,7 +2,7 @@
     "name": "ponpub-service",
     "version": "1.0.0",
     "description": "Ponpub service",
-    "main": "index.js",
+    "main": "build/index",
     "author": "Taufik Oktama <otta@unforma.club>",
     "license": "gpl-3.0",
     "private": true,
@@ -16,6 +16,7 @@
         "cookie-session": "^2.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
+        "ejs": "^3.1.6",
         "express": "^4.17.3",
         "express-async-errors": "^3.1.1",
         "express-mongo-sanitize": "^2.2.0",
