`fix` Modify deploy actions

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -18,11 +18,17 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: 22
           script: |
-            pm2 stop ponpub-service-prod
+            pm2 stop pm2-eco.config.js
             cd ~/ponpub-demo/service
             git pull
             git status
             rm -rf build
             yarn install
             yarn build
-            pm2 restart ponpub-service-prod
+            cd ~/ponpub-demo/console
+            git pull
+            git status
+            rm -rf .next
+            yarn install
+            yarn build
+            pm2 restart pm2-eco.config.js
