--- a/service/package.json
+++ b/service/package.json
@@ -8,7 +8,7 @@
     "private": true,
     "scripts": {
         "dev": "debug=* NODE_PATH=./src ts-node-dev --respawn --rs --clear --transpile-only --cache-directory ./tmp ./src/index",
-        "build": "rimraf build && tsc",
+        "build": "rm -rf build && tsc",
         "start": "NODE_PATH=./build NODE_ENV=production node build/index"
     },
     "dependencies": {
@@ -21,12 +21,15 @@
         "express-async-errors": "^3.1.1",
         "express-mongo-sanitize": "^2.2.0",
         "express-validator": "^6.14.0",
+        "geoip-lite": "^1.4.4",
         "helmet": "^5.0.2",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.8",
         "morgan": "^1.10.0",
         "multer": "^1.4.4",
         "nanoid": "^3.3.1",
+        "rate-limiter-flexible": "^2.3.6",
+        "serve-favicon": "^2.5.0",
         "sharp": "^0.30.3",
         "xss-clean": "^0.1.1"
     },
@@ -35,10 +38,12 @@
         "@types/cookie-session": "^2.0.44",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
+        "@types/geoip-lite": "^1.4.1",
         "@types/jsonwebtoken": "^8.5.8",
         "@types/morgan": "^1.9.3",
         "@types/multer": "^1.4.7",
         "@types/node": "^17.0.23",
+        "@types/serve-favicon": "^2.5.3",
         "ts-node-dev": "^1.1.8",
         "typescript": "^4.6.3"
     }
