--- a/console/package.json
+++ b/console/package.json
@@ -7,7 +7,7 @@
     "license": "gpl-3.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 next dev",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
